<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bottomTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/bottomEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/bottomText" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bottomFirstBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/bottomTIL"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/first_bottom_text" />

    <Button
        android:id="@+id/bottomSecondBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/bottomFirstBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/second_bottom_text" />

    <Button
        android:id="@+id/bottomThirdBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/bottomSecondBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/third_bottom_text" />

    <Button
        android:id="@+id/bottomFourthBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/bottomThirdBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fourth_bottom_text" />

</androidx.constraintlayout.widget.ConstraintLayout>